feat: sync post /authorizations @outgoung
