# docker/ml-testing-toolkit/spec_files/api_definitions/fspiop_1.1/api_spec.yaml
@@ -1156,7 +1156,54 @@ paths:
           $ref: "#/components/responses/503"
 
   #Authorizations
-  /authorizations/{ID}:
+  /authorizations:
+    parameters:
+      - $ref: '#/components/parameters/Accept'
+      - $ref: '#/components/parameters/Content-Length'
+      - $ref: '#/components/parameters/Content-Type'
+      - $ref: '#/components/parameters/Date'
+      - $ref: '#/components/parameters/X-Forwarded-For'
+      - $ref: '#/components/parameters/FSPIOP-Source'
+      - $ref: '#/components/parameters/FSPIOP-Destination'
+      - $ref: '#/components/parameters/FSPIOP-Encryption'
+      - $ref: '#/components/parameters/FSPIOP-Signature'
+      - $ref: '#/components/parameters/FSPIOP-URI'
+      - $ref: '#/components/parameters/FSPIOP-HTTP-Method'
+    post:
+      description: >-
+        The HTTP request `POST /authorizations` is used to request the Payer to
+        enter the applicable credentials in the PISP system.
+      summary: /authorizations
+      operationId: AuthorizationsPost
+      tags:
+        - authorizations
+      requestBody:
+        description: Perform authorization
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AuthorizationsPostRequest'
+      responses:
+        '202':
+          $ref: '#/components/responses/202'
+        '400':
+          $ref: '#/components/responses/400'
+        '401':
+          $ref: '#/components/responses/401'
+        '403':
+          $ref: '#/components/responses/403'
+        '404':
+          $ref: '#/components/responses/404'
+        '405':
+          $ref: '#/components/responses/405'
+        '406':
+          $ref: '#/components/responses/406'
+        '501':
+          $ref: '#/components/responses/501'
+        '503':
+          $ref: '#/components/responses/503'
+  '/authorizations/{ID}':
     parameters:
       #Path
       - $ref: "#/components/parameters/ID"
@@ -2001,17 +2048,21 @@ components:
       enum:
         - OTP
         - QRCODE
+        - U2F
       description:
         Below are the allowed values for the enumeration AuthenticationType.
 
         - OTP - One-time password generated by the Payer FSP.
 
         - QRCODE - QR code used as One Time Password.
+
+        - U2F - U2F is a new addition isolated to Thirdparty stream.
     AuthenticationValue:
       title: AuthenticationValue
-      oneOf:
-        - $ref: "#/components/schemas/OtpValue"
-        - $ref: "#/components/schemas/QRCODE"
+      anyOf:
+        - $ref: '#/components/schemas/OtpValue'
+        - $ref: '#/components/schemas/QRCODE'
+        - $ref: '#/components/schemas/U2FPinValue'
       pattern: ^\d{3,10}$|^\S{1,64}$
       description: Contains the authentication value. The format depends on the authentication type used in the AuthenticationInfo complex type.
     AuthorizationResponse:
@@ -2471,6 +2522,35 @@ components:
       minLength: 1
       maxLength: 64
       description: QR code used as a One Time Password.
+    U2FPIN:
+      title: U2FPIN
+      type: string
+      pattern: '^\S{1,64}$'
+      minLength: 1
+      maxLength: 64
+      description: >
+        U2F challenge-response, where payer FSP verifies if the response
+        provided by end-user device matches the previously registered key.
+    U2FPinValue:
+      title: U2FPinValue
+      type: object
+      description: >
+        U2F challenge-response, where payer FSP verifies if the response
+        provided by end-user device matches the previously registered key.
+      properties:
+        pinValue:
+          allOf:
+            - $ref: '#/components/schemas/U2FPIN'
+          description: U2F challenge-response.
+        counter:
+          allOf:
+            - $ref: '#/components/schemas/Integer'
+          description: >-
+            Sequential counter used for cloning detection. Present only for U2F
+            authentication.
+      required:
+        - pinValue
+        - counter
     RefundReason:
       title: RefundReason
       type: string
@@ -2624,6 +2704,31 @@ components:
           example: ENTERED
       required:
         - responseType
+    AuthorizationsPostRequest:
+      title: AuthorizationsPostRequest
+      description: POST /authorizations Request object
+      type: object
+      properties:
+        authenticationType:
+          $ref: '#/components/schemas/AuthenticationType'
+        retriesLeft:
+          $ref: '#/components/schemas/Integer'
+        amount:
+          $ref: '#/components/schemas/Money'
+        transactionId:
+          $ref: '#/components/schemas/CorrelationId'
+        transactionRequestId:
+          $ref: '#/components/schemas/CorrelationId'
+        quote:
+          $ref: '#/components/schemas/QuotesIDPutResponse'
+      required:
+        - authenticationType
+        - retriesLeft
+        - amount
+        - transactionId
+        - transactionRequestId
+        - quote
+      additionalProperties: false
     BulkQuotesIDPutResponse:
       title: BulkQuotesIDPutResponse
       type: object
